Upgrade quarkus and gradle version. Fix build issues and warnings.